FoodBank/objects/Service__c.object
<CustomObject>
    <description>A service provided to a family</description>
    <fields>
        <fullName>Adopted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adopted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appt__c</fullName>
        <label>Appt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BoxSize__c</fullName>
        <label>Box Size</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S/NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S/WC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XXL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BoxType__c</fullName>
        <label>Box Type</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Supplement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compl/Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eggs only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHP Adpt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Harvest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pack the Bag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Produce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandwhiches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youth Summer Feeding Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateOfService__c</fullName>
        <description>When was the service provided/delivered?</description>
        <label>Date of Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveryDate__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DistributionMethod__c</fullName>
        <label>Distribution Method</label>
        <picklist>
            <picklistValues>
                <fullName>Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pickup</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <referenceTo>Family__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order #</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceID__c</fullName>
        <label>Service ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TypeOfMeat__c</fullName>
        <label>Type of meat</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Turkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkey/Ham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ham/Chicken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypeOfService__c</fullName>
        <label>Type of service</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>